--- a/src/App.css
+++ b/src/App.css
@@ -76,12 +76,10 @@ body {
   background-color: #33399b;
   color: #ffffff;
 }
-._hover03:hover a {
+._hover03:hover span {
   color: #ffffff;
 }
 
-.pop-user-set:target,
-.pop-exit:target,
 .pop-new-card:target,
 .pop-browse:target {
   display: block;
@@ -201,7 +199,7 @@ body {
   letter-spacing: -0.14px;
   color: #ffffff;
 }
-.pop-exit__exit-no a {
+.pop-exit__exit-no span {
   width: 100%;
   height: 100%;
   color: #565eef;
